updated footer and header updated labels in Trips/Create.cshtml

--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Create.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Create.cshtml
@@ -13,21 +13,21 @@
         }
     </select>
     <br />
-    <label for="startDate">Дата та час приїзду в місто*</label>
+    <label for="startDate">Date and time of your arrival to the city*</label>
     <br />
     <input type="date" name="startDate" id="StartDate" required />
     <input type="time" name="startTime" id="StartTime" />
     <br />
-    <label for="finishDate">Дата та час від'їзду з міста*</label>
+    <label for="finishDate">Date and time of your departure from the city*</label>
     <br />
     <input type="date" name="finishDate" id="FinishDate" required />
     <input type="time" name="finishTime" id="FinishTime" />
     <br />
-    <label for="budget">Орієнтовний бюджет на 1 день*</label>
+    <label for="budget">Estimated budget for 1 day*</label>
     <br />
     <input type="number" name="budget" id="Budget" required />
     <br />
-    <label for="tags">Типи закладів, які ви хочете відвідати*</label>
+    <label for="tags">Types of facilities you wish to visit*</label>
     <br />
     <select name="chosenTags" multiple="multiple" required>
         @{
