--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Edit.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Edit.cshtml
@@ -14,7 +14,7 @@
 <hr />
 <div class="row">
     <div class="col-sm-3">
-        @using (Html.BeginForm("Edit", "Trips", FormMethod.Post, new {onsubmit = "return getCheckedPlaces()"}))
+        @using (Html.BeginForm("Edit", "Trips", FormMethod.Post, new { id = "formSubmit", onsubmit = "return getCheckedPlaces()"}))
         {
             @*<form asp-action="Edit">*@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -71,17 +71,17 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a style="background-color: azure"style="background-color: azure" asp-action="Index">Back to List</a>
 </div>
 <div>
     <button id="addPlaces" onclick="showAvailablePlaces()">Show/Hide list of available places</button>
 </div>
 
 <div class="currentPlaces">
-    <h4>Current places</h4>
+    <h4 style="color: antiquewhite">Current places</h4>
     <table id="table_places" class="table table-striped table-hover table-condensed">
-        <thead>
-            <tr>
+        <thead style="background-color: antiquewhite">
+            <tr >
                 <th>
 
                 </th>
@@ -109,7 +109,7 @@
 
             </tr>
         </thead>
-        <tbody>
+        <tbody style="background-color: azure">
             @{
                 var places = Model.Places.Where(pl => pl.Trip != null && pl.Trip.Id == Model.Trips[0].Id).ToList();
                 foreach (var place in places)
@@ -146,19 +146,19 @@
     </table>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a style="background-color: azure" asp-action="Index">Back to List</a>
     </div>
 
     <div class="form-group">
-        @*<input type="submit" value="Save" class="btn btn-default" onsubmit="getCheckedPlaces()" />*@
-        <button class="btn btn-default" type="submit" value="Save" name="submit" onsubmit="getCheckedPlaces();">Save</button>
+        @*<input type="submit" value="Save" class="btn btn-default" onclick="$('#formSubmit').submit();" />*@
+        @*<button class="btn btn-default" value="Save" name="submit" onclick="$('#formSubmit').submit();">Save</button>*@ @*type="submit"*@
     </div>
 </div>
 
 <div id="availablePlaces" style="display: none;">
-    <h4>Available places</h4>
+    <h4 style="color: antiquewhite">Available places</h4>
     <table id="table_availablePlaces" class="table table-striped table-hover table-condensed">
-        <thead>
+        <thead style="background-color: antiquewhite">
             <tr>
                 <th>
 
@@ -187,7 +187,7 @@
 
             </tr>
         </thead>
-        <tbody>
+        <tbody style="background-color: azure">
             @{
                 foreach (var place in Model.AvailablePlaces)
                 {
@@ -224,11 +224,11 @@
 
     <div class="form-group">
         @*<input type="submit" value="Save" class="btn btn-default" onsubmit="getCheckedPlaces()" />*@
-        <button class="btn btn-default" type="submit" value="Save" name="submit" onsubmit="getCheckedPlaces();">Save</button>
+        @*<button class="btn btn-default" value="Save" name="submit" onclick="$('#formSubmit').submit();">Save</button>*@ @*type="submit"*@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a style="background-color: azure" asp-action="Index">Back to List</a>
     </div>
 </div>
 
