--- a/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Index.cshtml
@@ -46,6 +46,12 @@
                 @Html.SortableHeaderFor(model => model.Address, "Address", this.Model)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Latitude)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Longtitude)
+            </th>
+            <th>
                 @Html.SortableHeaderFor(model => model.WorkTimeStart, "WorkTimeStart", this.Model)
             </th>
             <th>
@@ -61,7 +67,7 @@
                 @Html.SortableHeaderFor(model => model.Rating, "Rating", this.Model)
             </th>
             <th></th>
-    </thead>
+</thead>
     <tbody>
         @foreach (var item in Model)
         {
@@ -77,6 +83,12 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Latitude)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Longtitude)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.WorkTimeStart)
