add view ContactUs

--- a/TouristGreenbook/TGB.WebAPI/Views/Shared/_Layout.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
             <p>
                 &copy; 2019 - .Net Raptor Team
                 <a>|</a>
-                <a href="#">Contact us</a>
+                <a asp-area="" asp-controller="Home" asp-action="ContactUs">Contact us</a>
             </p>
         </footer>
     </div>
