updated contact us

--- a/TouristGreenbook/TGB.WebAPI/Views/Home/ContactUs.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Home/ContactUs.cshtml
@@ -11,9 +11,10 @@
             <img src="~/images/photo_2019-04-24_00-22-31.jpg" alt="Sergii" style="width:100%">
             <div class="container">
                 <h2>Sergii Shvets</h2>
-                <p class="title">CEO & Founder</p>
-                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                <p>example@example.com</p>
+                <p class="title">.Net developer</p>
+                <p>Responsible for applying Google maps API</p>
+                <p>and deployment into Azure.</p>
+                <p>sergius.shvets@raptor.team</p>
             </div>
         </div>
     </div>
@@ -23,9 +24,10 @@
             <img src="~/images/photo_2019-04-23_16-59-45.jpg" alt="Yurii" style="width:100%">
             <div class="container">
                 <h2>Yurii Danchyshyn</h2>
-                <p class="title">Art Director</p>
-                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                <p>example@example.com</p>
+                <p class="title">.Net developer</p>
+                <p>Responsible for authentication and authorization,</p>
+                <p>database creation, administration.</p>
+                <p>yurii.danchyshyn@raptor.team</p>
             </div>
         </div>
     </div>
@@ -34,9 +36,10 @@
             <img src="~/images/photo_2019-04-24_14-10-16.jpg" alt="Roman" style="width:100%">
             <div class="container">
                 <h2>Roman Horbachevskyi</h2>
-                <p class="title">Designer</p>
-                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                <p>example@example.com</p>
+                <p class="title">.Net developer</p>
+                <p>Responsible for trips creation and modification,</p>
+                <p>database migrations, team work coordination.</p>
+                <p>roman.horbachevskyi@raptor.team</p>
             </div>
         </div>
     </div>
