--- a/TouristGreenbook/TGB.WebAPI/Views/ShowPlaces/ShowAllPlaces.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/ShowPlaces/ShowAllPlaces.cshtml
@@ -19,13 +19,12 @@
 
 <div id="map_canvas" style="width: 1000px; height: 1000px;"></div>
 
-<div id="map"></div>
+
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap">
 </script>
 
 ﻿
-<script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
 
 
 <style>
@@ -54,10 +53,10 @@
 
 
                 $(document).ready(function () {
-                    Initialize();
+                    initMap();
                 });
 
-            function Initialize() {
+            function initMap() {
 
                 google.maps.visualRefresh = true;
                 var Lviv = new google.maps.LatLng(49.8382600, 24.0232400);
