--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
@@ -281,8 +281,8 @@
     @:myModel.push({
     @:ID: '@place.Id',
     @:Name: '@place.Name',
-    @:Lat:  '@place.Latitude'),
-    @:Long: '@place.Longtitude'),
+    @:Lat:  '@place.Latitude',
+    @:Long: '@place.Longtitude',
     @:});
     }
 
